--- a/verlen.ini
+++ b/verlen.ini
@@ -1,5 +1,5 @@
 [UPD]
-v=0.01
-build=1
-des= -
+v=0.02
+build=2
+des= Убрал автор. права у всех кроме (Stouk_Armstrong)
 upd= Комманды: /cmd | Помощь с AHK: /help
